# CrowdOracle-Campaign-Sentiment-Forecast

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  nixpacks.toml  vercel.json
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  database.py
backend/app/api/: __init__.py  analytics.py  campaign.py  creatives.py  demo.py  graph.py  providers.py  report.py  simulation.py
backend/app/models/: __init__.py  campaign.py  creative_asset.py  mention.py  performance_metric.py  project.py  provider_config.py  task.py
backend/app/services/: campaign_ingestion_service.py  creative_analysis_service.py  dashboard_service.py  graph_builder.py  impact_analysis_service.py  keyword_analysis_service.py  marketing_report_service.py  mention_ingestion_service.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  sentiment_analysis_service.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/services/llm/: __init__.py  base.py  registry.py
backend/app/services/llm/providers/: anthropic_provider.py  custom_provider.py  gemini_provider.py  openai_provider.py  qwen_provider.py
backend/app/utils/: __init__.py  file_parser.py  llm_client.py  locale.py  logger.py  retry.py  zep_paging.py
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
frontend/: .env.example  (+3 more)
(+93 files in other folders)
