[project]
name = "bigbrother-backend"
version = "0.1.0"
description = "BigBrother — Campaign Sentiment Forecast: a marketing campaign impact intelligence platform built on top of a multi-agent crowd simulation engine."
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Prima Hanura Akbar" }
]

dependencies = [
    # Core framework
    "flask>=3.0.0",
    "flask-cors>=6.0.0",

    # LLM
    "openai>=1.0.0",

    # Zep Cloud
    "zep-cloud==3.13.0",

    # OASIS social-media simulation
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",

    # File handling
    "PyMuPDF>=1.24.0",
    # Encoding detection (for non-UTF-8 text files)
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",

    # Database
    "flask-sqlalchemy>=3.0.0",

    # Multimodal creative analysis
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "moviepy>=1.0.3",

    # Data analytics
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "langdetect>=1.0.9",
    "nltk>=3.8.0",

    # Extra LLM providers
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
